Revision history for Perl extension Inline::CPP.
0.34_002 -----------------------------
    - Patch to Makefile.PL provided by smoke tester Steven Schubiger which
      allows module to successfully install on MirBSD systems.
0.34_001 Thur Feb 09 23:22:00 PST 2012
    - Patched Makefile.PL (as suggested by sisyphus) to better detect proper
      Solaris compiler (targeting Solaris 2.11 bug).
0.34 Mon Feb 06 22:32:00 PST 2012
    - Carry all updates current in 0.33_010(Dev) to 0.34(Stable) for release
      to CPAN.
    - Set minimum version for Inline and Inline::C dependency to 0.50 to
      take advantage of Inline patch that resolves the issue where smoke
      testers were unable to locate Parse::RecDescent dependency.
    - POD revisions.
0.33_010  Fri Feb 03 23:45:00 PST 2012
    [Patch applied by David Oswald]
    *** NEVER RELEASED ***
    - Update Makefile.PL to set v0.49_02 as the minimum Inline and Inline::C
      dependency versions to further evalute smoke-tests.
0.33_009  Thu Feb 02 10:32:00 PST 2012
    [Worked out patch between David Oswald and sisyphus]
    - Roll back early loading of Parse::RecDescent.
    - Set PREREQ_PM to Inline 0.49_01 to take advantage of recent bugfix.
    - Bump version number and push to CPAN for fresh round of smoke testing.
0.33_008  Mon Jan 30 22:05:00 PST 2012
    [Patches by David Oswald]
    - Make sure that Parse::RecDescent loads ahead of Inline::C so that the
      smoke-testers incompatible @INC modifications won't cause smoke failure.
    - Add 17memberarray.t to the test suite to validate the new code that
      allows Inline::CPP to recognize arrays as class/struct data members.
0.33_007  Sun Jan 29 20:35:00 PST 2012
    [Test suite patches by David Oswald]
    - If 00load_prereqs.t does successfully load Parse::RecDescent (which it
      always seems to do), output the location it was found so it can be
      compared to @INC.
0.33_006  Sun Jan 22 05:59:00 PST 2012
    *** NEVER RELEASED ***